turtleart.lessons.turtleart.Main.Flower.scala.error
Source:3: error: not found: value octogone
	octogone();
        ^